unpackaged/main/default/objects/OrderApi__Credit_Memo__c/OrderApi__Credit_Memo__c.object-meta.xml
<CustomObject>
    <description>Credit Memos track revenue received as additional payment.</description>
    <label>Credit Memo</label>
    <nameField>
        <displayFormat>{000000000}</displayFormat>
        <label>Credit Memo Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Credit Memos</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>