unpackaged/main/default/objects/OrderApi__Credit_Memo__c/fields/OrderApi__Account__c.field-meta.xml
<CustomField>
    <fullName>OrderApi__Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>**System Calculated/Override** Link to the customer&#39;s account record. Auto-populates with the related contact&#39;s parent account if not defined prior to entry.</description>
    <inlineHelpText>**System Calculated/Override** Link to the customer&#39;s account record. Auto-populates with the related contact&#39;s parent account if not defined prior to entry.</inlineHelpText>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Credit Memos</relationshipLabel>
    <relationshipName>Credit_Memos</relationshipName>
    <type>Lookup</type>
</CustomField>