unpackaged/main/default/objects/OrderApi__Credit_Memo__c/fields/OrderApi__Applied_Amount__c.field-meta.xml
<CustomField>
    <fullName>OrderApi__Applied_Amount__c</fullName>
    <description>** System Calculated ** The total amount of credit memo lines that have been posted related to this Credit Memo.</description>
    <inlineHelpText>** System Calculated ** The total amount of credit memo lines that have been posted related to this Credit Memo.</inlineHelpText>
    <label>Applied Amount</label>
    <summarizedField>OrderApi__Credit_Memo_Line__c.OrderApi__Amount__c</summarizedField>
    <summaryForeignKey>OrderApi__Credit_Memo_Line__c.OrderApi__Credit_Memo__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>