unpackaged/main/default/objects/OrderApi__Credit_Memo__c/fields/OrderApi__Contact__c.field-meta.xml
<CustomField>
    <fullName>OrderApi__Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>**System Calculated/Override** Link to the customer&#39;s contact record. Auto-populates with the related account&#39;s primary contact if not defined prior to entry.</description>
    <inlineHelpText>**System Calculated/Override** Link to the customer&#39;s contact record. Auto-populates with the related account&#39;s primary contact if not defined prior to entry.</inlineHelpText>
    <label>Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Credit Memos</relationshipLabel>
    <relationshipName>Credit_Memos</relationshipName>
    <type>Lookup</type>
</CustomField>