unpackaged/main/default/objects/OrderApi__Credit_Memo__c/fields/OrderApi__Credit_Account__c.field-meta.xml
<CustomField>
    <fullName>OrderApi__Credit_Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>**System Calculated/Override** The account to use for crediting additional revenue received. Default value is the linked Business Group&#39;s Credit Memo account.</description>
    <inlineHelpText>**System Calculated/Override** The account to use for crediting additional revenue received. Default value is the linked Business Group&#39;s Credit Memo account.</inlineHelpText>
    <label>Credit Account</label>
    <referenceTo>OrderApi__GL_Account__c</referenceTo>
    <relationshipLabel>Credit Memo&#39;s</relationshipLabel>
    <relationshipName>Credit_Memo_s</relationshipName>
    <type>Lookup</type>
</CustomField>