unpackaged/main/default/objects/OrderApi__Credit_Memo__c/fields/OrderApi__Debit_Account__c.field-meta.xml
<CustomField>
    <fullName>OrderApi__Debit_Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>**System Calculated/Override** The GL account to use when posting to debit. Default value is the linked Business Group&#39;s writeoff account.</description>
    <inlineHelpText>**System Calculated/Override** The GL account to use when posting to debit. Default value is the linked Business Group&#39;s writeOff account.</inlineHelpText>
    <label>Debit Account</label>
    <referenceTo>OrderApi__GL_Account__c</referenceTo>
    <relationshipLabel>Debit Credit Memos</relationshipLabel>
    <relationshipName>Debit_Credit_Memos</relationshipName>
    <type>Lookup</type>
</CustomField>