unpackaged/main/default/objects/OrderApi__Credit_Memo__c/fields/OrderApi__Is_Drafted__c.field-meta.xml
<CustomField>
    <fullName>OrderApi__Is_Drafted__c</fullName>
    <defaultValue>false</defaultValue>
    <description>When checked, the credit memo is in a draft status.</description>
    <inlineHelpText>When checked, the credit memo is in a draft status.</inlineHelpText>
    <label>Is Drafted</label>
    <type>Checkbox</type>
</CustomField>