unpackaged/main/default/objects/OrderApi__Credit_Memo__c/fields/OrderApi__Remaining_Amount__c.field-meta.xml
<CustomField>
    <fullName>OrderApi__Remaining_Amount__c</fullName>
    <description>**System Calculated** Total - Applied</description>
    <formula>OrderApi__Amount__c - OrderApi__Applied_Amount__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>**System Calculated** Total - Applied</inlineHelpText>
    <label>Remaining Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>