unpackaged/main/default/objects/OrderApi__Credit_Memo__c/fields/OrderApi__Sales_Order__c.field-meta.xml
<CustomField>
    <fullName>OrderApi__Sales_Order__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Sales Order where the OverPayment is made.</description>
    <inlineHelpText>Sales Order where the OverPayment is made.</inlineHelpText>
    <label>Sales Order</label>
    <referenceTo>OrderApi__Sales_Order__c</referenceTo>
    <relationshipLabel>Credit Memos</relationshipLabel>
    <relationshipName>Credit_Memos</relationshipName>
    <type>Lookup</type>
</CustomField>