unpackaged/main/default/objects/OrderApi__Credit_Memo__c/listViews/OrderApi__All.listView-meta.xml
<ListView>
    <fullName>OrderApi__All</fullName>
    <columns>NAME</columns>
    <columns>OrderApi__Contact__c</columns>
    <columns>OrderApi__Account__c</columns>
    <columns>OrderApi__Remaining_Amount__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>